<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:gravity="center"
    tools:context=".StartActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/walrus"
        android:adjustViewBounds="true"
        android:maxWidth="80dp"
        android:paddingTop="130dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:textColor="@color/colorText"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/backgroundforstart"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcometowalrus"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/loginorresgistertostart"
            android:textSize="11sp"
            android:textColor="#72767d"
            />


    <Button
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:id="@+id/button_login"
        android:text="@string/login"/>

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:id="@+id/button_register"
        android:text="@string/register"
        />
    </LinearLayout>


</LinearLayout>