<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <include android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="@color/background">
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/backgroundforstart">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/send_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                app:met_textColor="@color/colorText"
                app:met_floatingLabel="normal"
                android:hint="@string/email"
                app:met_textColorHint="@color/colorText"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/button_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="60dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorText"
                android:text="@string/confirmemail"
                />

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>