<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="@color/background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/backgroundforstart">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:met_textColor="@color/colorText"
                android:hint="Email"
                android:textSize="15sp"
                app:met_textColorHint="@color/colorText"
                android:inputType="textEmailAddress"
                app:met_floatingLabel="normal" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                app:met_textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:met_textColorHint="@color/colorText"
                app:met_floatingLabel="normal" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forgot_pass_word"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="start"
                android:textStyle="bold"
                android:textColor="#72767d"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="250dp"
                android:textColor="@android:color/white"
                />

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>